<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="education.udacity.com.myappportfolio.MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_main_title"
        android:padding="0dp"
        android:textSize="20sp"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/buttonPopularMovies"
        android:layout_width="@dimen/button_layout_width"
        android:layout_height="wrap_content"
        android:text="@string/label_popular_movies"
        android:background="@color/buttonBackgroundColor"
        android:textColor="@color/buttonTextColor"
        android:layout_margin="@dimen/button_margin"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/buttonStockHawk"
        android:layout_width="@dimen/button_layout_width"
        android:layout_height="wrap_content"
        android:text="@string/label_stock_hawk"
        android:background="@color/buttonBackgroundColor"
        android:textColor="@color/buttonTextColor"
        android:layout_margin="@dimen/button_margin"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/buttonBuildItBigger"
        android:layout_width="@dimen/button_layout_width"
        android:layout_height="wrap_content"
        android:text="@string/label_build_it_bigger"
        android:background="@color/buttonBackgroundColor"
        android:textColor="@color/buttonTextColor"
        android:layout_margin="@dimen/button_margin"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/buttonMakeYourAppMaterial"
        android:layout_width="@dimen/button_layout_width"
        android:layout_height="wrap_content"
        android:text="@string/label_make_your_app_material"
        android:background="@color/buttonBackgroundColor"
        android:textColor="@color/buttonTextColor"
        android:layout_margin="@dimen/button_margin"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/buttonGoUbiquitous"
        android:layout_width="@dimen/button_layout_width"
        android:layout_height="wrap_content"
        android:text="@string/label_go_ubiquitous"
        android:background="@color/buttonBackgroundColor"
        android:textColor="@color/buttonTextColor"
        android:layout_margin="@dimen/button_margin"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/buttonCapstone"
        android:layout_width="@dimen/button_layout_width"
        android:layout_height="wrap_content"
        android:text="@string/label_capstone"
        android:background="@color/buttonBackgroundColor"
        android:textColor="@color/buttonTextColor"
        android:layout_margin="@dimen/button_margin" />
</LinearLayout>
